2010-02-08  Jie Zhang  <jie.zhang@analog.com>

  * include/urjtag/part.h (struct URJ_PART_PARAMS): Add wait_ready.
  * include/urjtag/bfin.h (bfin_wait_clocks): Declare.
  * include/urjtag/chain.h (urj_tap_chain_wait_ready): Declare.
  * src/tap/chain.c (urj_tap_chain_wait_ready): New.
  * src/tap/tap.c (urj_tap_defer_shift_register): Call
    urj_tap_chain_wait_ready if Run-Test/Idle.
  * src/bfin/bfin.c (bfin_wait_clocks): Define.
    (part_emudat_defer_get): Call chain_wait_ready when Run-Test/Idle.
    (part_emudat_get): Likewise.
  * src/bfin/bfin-part-bfin.c: Include <sysdep.h>, <urjtag/chain.h>,
    <urjtag/cable.h> and <urjtag/log.h>.
    (bfin_wait_ready): New.
    (bfin_part_init): Init wait_ready.

2010-02-06  Jie Zhang  <jie.zhang@analog.com>

  * include/urjtag/cable.h (enum action): Add URJ_TAP_CABLE_CLOCK_COMPACT.
  * src/tap/cable/generic.c (do_one_queued_action): Handle
    URJ_TAP_CABLE_CLOCK_COMPACT to turn off GCC warning.
  * src/tap/cable/ft2232.c (ft2232_clock_compact_schedule): New.
    (ft2232_flush): Compact consecutive clocks.

2010-02-05  Mike Frysinger  <vapier@gentoo.org>

  * acinclude.m4 (AS_VAR_APPEND): Fix a few typos.

  * data/analog/bf592/bf592: New.
  * data/analog/bf592/STEPPINGS: New.
  * data/analog/PARTS: Add bf592.
  * data/Makefile.am (nobase_dist_pkgdata_DATA): Add
    analog/bf592/STEPPINGS and analog/bf592/bf592.

  * configure.ac: Enable quiet automake rules when available.

  * include/urjtag/jtag.h (urj_big_endian, urj_endian_t, urj_get_file_endian,
    urj_set_file_endian, urj_endian_to_string, urj_endian_from_string): Replace
    exposed endian storage with dedicated functions for parsing endians.
  * src/global/log-error.c (urj_big_endian): Drop local storage.
  * src/cmd/cmd_endian.c: Centralize all endian functions here.
  * src/bus/readmem.c (urj_bus_readmem): Switch to new endian file functions.
  * src/bus/writemem.c (urj_bus_writemem): Likewise.
  * src/flash/flash.c (urj_flashmem): Likewise.
